fix the video.css path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <header>
     <title>YouTube Exercise</title>
-    <link rel="stylesheet" href="/youtube-style/video.css">
+    <link rel="stylesheet" href="./youtube-style/video.css">
     <link rel="stylesheet" href="./youtube-style/header.css">
     <link rel="stylesheet" href="./youtube-style/general.css">
     <link rel="stylesheet" href="./youtube-style/sidebar.css">
